# channels_rabbitmq

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.rst  Dockerfile.test  LICENSE  README.rst  pyproject.toml  setup.cfg  setup.py  test-rabbitmq.conf
.github/workflows/: docker-image.yml
channels_rabbitmq/: __init__.py  connection.py  core.py  multiqueue.py  reader.py  util.py
ssl/: prepare-certs.sh
tests/: test_connection.py  test_core.py
