[build-system]
requires = ["poetry_core>=1.3.2", "poetry-dynamic-versioning>=0.20.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "channels_rabbitmq"
version = "0.0.0"
description = "RabbitMQ-based ASGI channel layer implementation"
authors = ["Adam Hooper <adam@adamhooper.com>"]
license = "BSD"
readme = "README.rst"

[tool.poetry.dependencies]
carehare = "~=1.0"
channels = ">=3.0,<5"
msgpack = "~=1.0"
python = ">=3.8,<3.11"

[tool.poetry.dev-dependencies]
pytest = ">=7.1.3,<8"
pytest-asyncio = ">=0.20.1,<0.21"
pytest-cov = ">=4.0.0,<5"
pytest-timeout = ">=2.1.0,<2.2.0"
asgiref = ">=3.5.2,<4"

[tool.isort]
# Black compatibility
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = True
skipsdist = True
envlist = {py38,py39,py310}-{pyflakes,black,isort,pytest}

[flake8]
exclude = venv/*,tox/*,specs/*,build/*
ignore = E123,E128,E266,E402,W503,E731,W601
max-line-length = 88

[testenv]
skip_install = true
deps =
  pyflakes: pyflakes>=2.5.0
  black: black>=22.10.0
  isort: isort>=5.10.1
  pytest: poetry
commands_pre =
  pytest: poetry install -v
commands =
  pyflakes: pyflakes channels_rabbitmq tests
  black: black --check channels_rabbitmq tests
  isort: isort --check --diff channels_rabbitmq tests
  pytest: poetry run pytest --cov=channels_rabbitmq --cov-report term-missing -v
"""
